# httpc

./: .gitignore  CMakeLists.txt  README.md  flake.nix  index.html  makefile
include/: files.h  header.h  headers.h  log.h  print.h  request.h  response.h  server.h
src/: files.c  header.c  headers.c  log.c  main.c  print.c  print.h  request.c  request.h  response.c  response.h  server.c  server.h
www/: index.html
www/css/: style.css
